testsuite/tests/ghc-regress/indexed-types/should_fail/Simple2a.stderr

Simple2a.hs:12:2: parse error (possibly incorrect indentation)
